web/themes/da_vinci/src/sass/pages/_node-type-session.sass
.page-node-type-session
  .field--name-field-user-ref
    padding-bottom: 3em
    +breakpoint($medium-small)
      +span(4 of 12 first)
      padding-right: 8%
    > .field__item
      margin-bottom: 2em
      .field--name-field-register-name
        font-family: $default
        text-transform: none
        text-align: center
        font-weight: 600
      .field--name-field-register-drupal-name
        text-align: right
        font-size: 0.9em
        margin-top: 0.25em
      .field--name-field-register-picture
        margin-bottom: 0.5em
        img
          width: 170px
        a
          transition: filter 0.8s
          +breakpoint($large)
            width: 150px
            max-width: 100%
            top: 13px
            left: 15px
          img
            width: 145px
            background: $white
          &:hover
            opacity: 1
            filter: grayscale(100%)
  .session-info
    +breakpoint($medium-small)
      +span(8 of 12 last)
    .page-title
      text-align: left
      text-transform: none
      line-height: 1em
      margin-top: 0
      word-break: break-all
      font-size: 30px
      +breakpoint($medium-small)
        word-break: normal
      +breakpoint($large)
        font-size: 48px
    .field--type-list-string
      text-transform: uppercase
      font-weight: 600
      display: inline-block
      font-family: $title
      margin-right: 0.5em
      &:after
        content: ','
      &.field--name-field-session-track-type:after
        content: none
    .text-formatted p
      line-height: 1.5em

